--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!--naaavbaar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent p-5">
     
+    
     <div class="container-fluid">
       <a class="navbar-brand col md-5" href="#">
         <img class="img-fluid w-100 px-1" src="images/logo.webp" alt="nav-logo">
@@ -51,8 +52,8 @@
 
   <!-- main-background-->
   <div class="container-fluid w-100 position-relative ">
-    <div id="mouse"></div>
-    </div>
+    <!-- <div id="mouse"></div>
+    </div> -->
     <div class="container-fluid custom-background w-100" id="main">
       <div class="text custom-text w-100">
         <p><b><i>Build beautiful,</i></b></p>
