--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- <div id="mouse"></div>
     </div> -->
     <div class="container-fluid custom-background w-100" id="main">
-      <div class="text custom-text w-100">
+      <div class="text custom-text w-100 ps-4">
         <p><b><i>Build beautiful,</i></b></p>
         <p><b><i>sustainable communities</i></b></p>
       </div>      
