--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
   <!-- main-background-->
   <div class="container-fluid w-100 position-relative ">
-    <!-- <div id="mouse"></div>
-    </div> -->
+    <div id="mouse"></div>
+    </div>
     <div class="container-fluid custom-background w-100" id="main">
       <div class="text custom-text w-100 ps-4">
         <p><b><i>Build beautiful,</i></b></p>
